[package]
name = "xmr_ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
curve25519-dalek = { version = "4.1.1", features = [ "digest" ] }
hex = "0.4.3"
miette = { version = "5.10.0", features = [ "fancy" ] }
monero = "0.19.0"
monero-rpc = "0.4.0"
sha2 = "0.10.8"
tokio = { version = "1.33.0", features = [ "rt", "rt-multi-thread", "macros" ] }

