[package]
name = "xmr_ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "=4.1.1", default-features = false }
monero =  { version = "0.21.0", default-features = false }
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib"]
